# flet-app-templates

./: LICENSE  README.md
app/: cookiecutter.json
app/{{cookiecutter.out_dir}}/: README.md  pyproject.toml
app/{{cookiecutter.out_dir}}/src/: main.py
assets/: manifest.json
counter/: README.md
extension/: cookiecutter.json
extension/{{cookiecutter.out_dir}}/: README.md  mkdocs.yml  pyproject.toml
extension/{{cookiecutter.out_dir}}/docs/: index.md  {{cookiecutter.control_name.lower()}}.md  {{cookiecutter.control_name}}.md
extension/{{cookiecutter.out_dir}}/examples/{{cookiecutter.project_name_underscore}}_example/: README.md  pyproject.toml
extension/{{cookiecutter.out_dir}}/examples/{{cookiecutter.project_name_underscore}}_example/src/: main.py
extension/{{cookiecutter.out_dir}}/examples/{{cookiecutter.project_name}}_example/: .gitignore  pyproject.toml
extension/{{cookiecutter.out_dir}}/examples/{{cookiecutter.project_name}}_example/src/: main.py
extension/{{cookiecutter.out_dir}}/src/flutter/{{cookiecutter.project_name_underscore}}/: pubspec.yaml
extension/{{cookiecutter.out_dir}}/src/flutter/{{cookiecutter.project_name_underscore}}/lib/: {{cookiecutter.project_name_underscore}}.dart
extension/{{cookiecutter.out_dir}}/src/flutter/{{cookiecutter.project_name_underscore}}/lib/src/: create_control.dart  extension.dart  {{cookiecutter.project_name_underscore}}.dart
extension/{{cookiecutter.out_dir}}/src/flutter/{{cookiecutter.project_name}}/: README.md  pubspec.yaml
extension/{{cookiecutter.out_dir}}/src/flutter/{{cookiecutter.project_name}}/lib/: {{cookiecutter.project_name}}.dart
extension/{{cookiecutter.out_dir}}/src/flutter/{{cookiecutter.project_name}}/lib/src/: create_control.dart  {{cookiecutter.project_name}}.dart
extension/{{cookiecutter.out_dir}}/src/{{cookiecutter.project_name_underscore}}/: .gitignore  __init__.py  {{cookiecutter.project_name_underscore}}.py  {{cookiecutter.project_name}}.py
extension/{{cookiecutter.out_dir}}/src/{{cookiecutter.project_name}}/: __init__.py  {{cookiecutter.project_name}}.py
flet_build/: cookiecutter.json
flet_build/{{cookiecutter.out_dir}}/: README.md  pubspec.yaml
flet_build/{{cookiecutter.out_dir}}/android/app/: build.gradle
flet_build/{{cookiecutter.out_dir}}/ios/Runner/: Info.plist
flet_build/{{cookiecutter.out_dir}}/ios/Runner.xcodeproj/: project.pbxproj
flet_build/{{cookiecutter.out_dir}}/lib/: main.dart
flet_build/{{cookiecutter.out_dir}}/linux/: CMakeLists.txt
flet_build/{{cookiecutter.out_dir}}/macos/Runner.xcodeproj/: project.pbxproj
flet_build/{{cookiecutter.out_dir}}/macos/Runner/Configs/: AppInfo.xcconfig
flet_build/{{cookiecutter.out_dir}}/web/: index.html  python-worker.js
minimal/: cookiecutter.json
minimal/{{cookiecutter.out_dir}}/: pyproject.toml  requirements.txt
minimal/{{cookiecutter.out_dir}}/assets/: manifest.json
{{cookiecutter.project_name}}/: README.md
