[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet=={{cookiecutter.flet_version}}"
]

[tool.flet]
# Docs: https://flet.dev/docs/publish
org = "com.mycompany"
product = "{{cookiecutter.project_name}}"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]=={{cookiecutter.flet_version}}",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "{{cookiecutter.flet_version}}"}