[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet>={{cookiecutter.flet_version}}"
]

[dependency-groups]
dev = [
  "flet[all]>={{cookiecutter.flet_version}}",
]

[tool.flet]
org = "com.mycompany"
product = "{{cookiecutter.project_name}}"
company = "Flet"
copyright = "Copyright (C) 2026 by Flet"

[tool.flet.app]
path = "src"