[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>={{cookiecutter.flet_version}}"
]

[dependency-groups]
dev = [
    "flet-cli>={{cookiecutter.flet_version}}",
{% if cookiecutter.platform == "linux" -%}
    "flet-desktop-light>={{cookiecutter.flet_version}}",
{% else -%}
    "flet-desktop>={{cookiecutter.flet_version}}",
{% endif -%}
    "flet-web>={{cookiecutter.flet_version}}",
]

[tool.flet]
org = "com.mycompany"
product = "{{cookiecutter.project_name}}"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
