[project]
name = "{{cookiecutter.project_name}}_example"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "{{cookiecutter.project_name}} @ file:{{cookiecutter.sep}}{{cookiecutter.sep}}{{cookiecutter._output_dir}}{{cookiecutter.sep}}{{cookiecutter.out_dir}}",
  "flet>={{cookiecutter.flet_version}}",
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "{{cookiecutter.project_name}}_example"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by MyCompany"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]>={{cookiecutter.flet_version}}",
]
